--- a/project/tsconfig.app.json
+++ b/project/tsconfig.app.json
@@ -21,7 +21,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
-  "include": ["src"]
+  "include": ["index.d.ts", "src/*.ts", "src/*.tsx", "src/**/*.ts", "src/**/*.tsx"]
 }
