--- a/project/package.json
+++ b/project/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@types/seedrandom": "^3.0.8",
     "ajv": "^8.17.1",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
