--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "dependencies": {
+    "@apideck/better-ajv-errors": "^0.3.6",
     "@monaco-editor/react": "^4.6.0",
     "@types/seedrandom": "^3.0.8",
     "ajv": "^8.17.1",
