--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@types/seedrandom": "^3.0.8",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
