--- a/project/tsconfig.app.json
+++ b/project/tsconfig.app.json
@@ -23,7 +23,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["index.d.ts", "src/*.ts", "src/*.tsx", "src/**/*.ts", "src/**/*.tsx"]
 }
