--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apideck/better-ajv-errors": "^0.3.6",
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "idb": "^8.0.0",
     "lucide-react": "^0.454.0",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
