--- a/project/package.json
+++ b/project/package.json
@@ -29,6 +29,7 @@
     "ajv-formats": "^3.0.1",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
